--- a/css/style.css
+++ b/css/style.css
@@ -86,6 +86,7 @@ nav button.login {
     text-align: left;
     font-size: 16px;
     margin-top: 6%;
+    margin-left: 5%
   } 
   p {
     margin-top: 4%;
