--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,7 @@
     cursor: pointer;
     transition: background 0.3s;
     text-align: center;
+       font-size: 150% ;
   }
   nav button.profile {
     padding: 10px 26px;
@@ -92,7 +93,7 @@ nav button.login {
     margin-left: 4%;
   }
   footer {
-    margin-top: 100%;
+    margin-top: 10%;
     text-align: center;
     font-size: 0.9rem;
     color: #999;
